fix: displaying on small screens, add absolute image

--- a/lab1-2/custom-styles.css
+++ b/lab1-2/custom-styles.css
@@ -78,3 +78,15 @@
 .underlined-text {
     text-decoration: underline;
 }
+
+.absolute-container {
+    position: absolute;
+    top: 50%;
+    left: 1%;
+    z-index: 100;
+}
+
+.absolute-image {
+    max-width: 8%;
+    z-index: 100;
+}
