--- a/lab1-2/styles.css
+++ b/lab1-2/styles.css
@@ -22,6 +22,21 @@ header, footer {
     padding-right: 10px;
 }
 
+@media screen and (max-width: 820px){
+    footer {
+        display: none;
+    }
+
+    #h2-title {
+        padding-left: 0 !important;
+        padding-bottom: 100px;
+    }
+
+    #h3-title {
+        display: none;
+    }
+}
+
 main {
     padding: 20px;
 }
